ParMylang.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParMylang.y
-----------------------------------------------------------------------------

state 12 contains 1 shift/reduce conflicts.
state 23 contains 1 shift/reduce conflicts.
state 26 contains 2 shift/reduce conflicts.
state 32 contains 1 shift/reduce conflicts.
state 43 contains 1 shift/reduce conflicts.
state 62 contains 1 reduce/reduce conflicts.
state 63 contains 1 shift/reduce conflicts.
state 84 contains 1 shift/reduce conflicts.
state 90 contains 1 shift/reduce conflicts.
state 98 contains 1 shift/reduce conflicts.
state 117 contains 1 shift/reduce conflicts.
state 127 contains 1 shift/reduce conflicts.
state 153 contains 1 shift/reduce conflicts.
state 159 contains 1 shift/reduce conflicts.
state 162 contains 1 shift/reduce conflicts.

rule 40 is unused
rule 49 is unused
rule 50 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> Type Ident '=' Expr ';'                  (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg -> ArgVal                                      (9)
	Arg -> Type '&' Ident                              (10)
	ArgVal -> Type Ident                               (11)
	ListArgVal ->                                      (12)
	ListArgVal -> ArgVal                               (13)
	ListArgVal -> ArgVal ',' ListArgVal                (14)
	ListArg ->                                         (15)
	ListArg -> Arg                                     (16)
	ListArg -> Arg ',' ListArg                         (17)
	Block -> '{' ListStmt '}'                          (18)
	ListStmt ->                                        (19)
	ListStmt -> Stmt ListStmt                          (20)
	Stmt -> ';'                                        (21)
	Stmt -> Block                                      (22)
	Stmt -> Type ListItem ';'                          (23)
	Stmt -> Type Ident '(' ListArg ')' Block           (24)
	Stmt -> '|' ListTup '|' '=' Expr                   (25)
	Stmt -> LHS '=' Expr ';'                           (26)
	Stmt -> Ident '++' ';'                             (27)
	Stmt -> Ident '--' ';'                             (28)
	Stmt -> 'return' Expr ';'                          (29)
	Stmt -> 'return' ';'                               (30)
	Stmt -> 'if' Expr Stmt                             (31)
	Stmt -> 'if' Expr Stmt 'else' Stmt                 (32)
	Stmt -> 'while' Expr Stmt                          (33)
	Stmt -> Expr ';'                                   (34)
	Stmt -> 'print' Expr                               (35)
	Stmt -> 'break' ';'                                (36)
	Stmt -> 'continue' ';'                             (37)
	Tup -> '|' ListTup '|'                             (38)
	Tup -> Type Ident                                  (39)
	ListTup ->                                         (40)
	ListTup -> Tup                                     (41)
	ListTup -> Tup ',' ListTup                         (42)
	Item -> Ident                                      (43)
	Item -> Ident '=' Expr                             (44)
	ListItem -> Item                                   (45)
	ListItem -> Item ',' ListItem                      (46)
	LHS -> Ident                                       (47)
	LHS -> Ident '[' Expr ']'                          (48)
	ListLHS -> LHS                                     (49)
	ListLHS -> LHS ',' ListLHS                         (50)
	Type -> 'int'                                      (51)
	Type -> 'string'                                   (52)
	Type -> 'bool'                                     (53)
	Type -> 'void'                                     (54)
	Type -> Type '[]'                                  (55)
	Type -> '|' ListType '|'                           (56)
	Type -> '(' ListType ')' '->' Type                 (57)
	ListType ->                                        (58)
	ListType -> Type                                   (59)
	ListType -> Type ',' ListType                      (60)
	Expr6 -> Ident                                     (61)
	Expr6 -> Integer                                   (62)
	Expr6 -> 'true'                                    (63)
	Expr6 -> 'false'                                   (64)
	Expr6 -> '[]'                                      (65)
	Expr6 -> '[' ListExpr ']'                          (66)
	Expr6 -> '(' ListArgVal ')' '=>' Block             (67)
	Expr6 -> Ident '(' ListExpr ')'                    (68)
	Expr6 -> Ident '[' Expr ']'                        (69)
	Expr6 -> '|' ListExpr '|'                          (70)
	Expr6 -> String                                    (71)
	Expr6 -> '(' Expr ')'                              (72)
	Expr5 -> '-' Expr6                                 (73)
	Expr5 -> '!' Expr6                                 (74)
	Expr5 -> Expr6                                     (75)
	Expr4 -> Expr4 MulOp Expr5                         (76)
	Expr4 -> Expr5                                     (77)
	Expr3 -> Expr3 AddOp Expr4                         (78)
	Expr3 -> Expr4                                     (79)
	Expr2 -> Expr2 RelOp Expr3                         (80)
	Expr2 -> Expr3                                     (81)
	Expr1 -> Expr2 '&&' Expr1                          (82)
	Expr1 -> Expr2                                     (83)
	Expr -> Expr1 '||' Expr                            (84)
	Expr -> Expr1                                      (85)
	ListExpr ->                                        (86)
	ListExpr -> Expr                                   (87)
	ListExpr -> Expr ',' ListExpr                      (88)
	AddOp -> '+'                                       (89)
	AddOp -> '-'                                       (90)
	MulOp -> '*'                                       (91)
	MulOp -> '/'                                       (92)
	MulOp -> '%'                                       (93)
	RelOp -> '<'                                       (94)
	RelOp -> '<='                                      (95)
	RelOp -> '>'                                       (96)
	RelOp -> '>='                                      (97)
	RelOp -> '=='                                      (98)
	RelOp -> '!='                                      (99)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'->'           { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'=>'           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	'[]'           { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'break'        { PT _ (TS _ 28) }
	'continue'     { PT _ (TS _ 29) }
	'else'         { PT _ (TS _ 30) }
	'false'        { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'print'        { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'string'       { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'|'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	Arg             rules 9, 10
	ArgVal          rule  11
	ListArgVal      rules 12, 13, 14
	ListArg         rules 15, 16, 17
	Block           rule  18
	ListStmt        rules 19, 20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37
	Tup             rules 38, 39
	ListTup         rules 40, 41, 42
	Item            rules 43, 44
	ListItem        rules 45, 46
	LHS             rules 47, 48
	ListLHS         rules 49, 50
	Type            rules 51, 52, 53, 54, 55, 56, 57
	ListType        rules 58, 59, 60
	Expr6           rules 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72
	Expr5           rules 73, 74, 75
	Expr4           rules 76, 77
	Expr3           rules 78, 79
	Expr2           rules 80, 81
	Expr1           rules 82, 83
	Expr            rules 84, 85
	ListExpr        rules 86, 87, 88
	AddOp           rules 89, 90
	MulOp           rules 91, 92, 93
	RelOp           rules 94, 95, 96, 97, 98, 99

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'('            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	'|'            shift, and enter state 12

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'bool'         reduce using rule 1
	'break'        reduce using rule 1
	'continue'     reduce using rule 1
	'else'         reduce using rule 1
	'false'        reduce using rule 1
	'if'           reduce using rule 1
	'int'          reduce using rule 1
	'print'        reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'true'         reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'{'            reduce using rule 1
	'|'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'('            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	'|'            shift, and enter state 12
	%eof           reduce using rule 7

	TopDef         goto state 4
	ListTopDef     goto state 18
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	TopDef -> Type . Ident '=' Expr ';'                 (rule 6)
	Type -> Type . '[]'                                 (rule 55)

	'[]'           shift, and enter state 17
	L_Ident        shift, and enter state 2

	Ident          goto state 16

State 7

	Type -> '(' . ListType ')' '->' Type                (rule 57)

	'('            shift, and enter state 7
	')'            reduce using rule 58
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	'|'            shift, and enter state 12

	Type           goto state 13
	ListType       goto state 15

State 8

	Type -> 'bool' .                                    (rule 53)

	'&'            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	'[]'           reduce using rule 53
	'|'            reduce using rule 53
	L_Ident        reduce using rule 53


State 9

	Type -> 'int' .                                     (rule 51)

	'&'            reduce using rule 51
	')'            reduce using rule 51
	','            reduce using rule 51
	'[]'           reduce using rule 51
	'|'            reduce using rule 51
	L_Ident        reduce using rule 51


State 10

	Type -> 'string' .                                  (rule 52)

	'&'            reduce using rule 52
	')'            reduce using rule 52
	','            reduce using rule 52
	'[]'           reduce using rule 52
	'|'            reduce using rule 52
	L_Ident        reduce using rule 52


State 11

	Type -> 'void' .                                    (rule 54)

	'&'            reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	'[]'           reduce using rule 54
	'|'            reduce using rule 54
	L_Ident        reduce using rule 54


State 12

	Type -> '|' . ListType '|'                          (rule 56)

	'('            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	'|'            shift, and enter state 12
			(reduce using rule 58)


	Type           goto state 13
	ListType       goto state 14

State 13

	Type -> Type . '[]'                                 (rule 55)
	ListType -> Type .                                  (rule 59)
	ListType -> Type . ',' ListType                     (rule 60)

	')'            reduce using rule 59
	','            shift, and enter state 23
	'[]'           shift, and enter state 17
	'|'            reduce using rule 59


State 14

	Type -> '|' ListType . '|'                          (rule 56)

	'|'            shift, and enter state 22


State 15

	Type -> '(' ListType . ')' '->' Type                (rule 57)

	')'            shift, and enter state 21


State 16

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)
	TopDef -> Type Ident . '=' Expr ';'                 (rule 6)

	'('            shift, and enter state 19
	'='            shift, and enter state 20


State 17

	Type -> Type '[]' .                                 (rule 55)

	'&'            reduce using rule 55
	')'            reduce using rule 55
	','            reduce using rule 55
	'[]'           reduce using rule 55
	'|'            reduce using rule 55
	L_Ident        reduce using rule 55


State 18

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 19

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	'('            shift, and enter state 7
	')'            reduce using rule 15
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
